fix spacing stuff

--- a/stylesheets/base/_layout.scss
+++ b/stylesheets/base/_layout.scss
@@ -3,21 +3,26 @@
     height: 100%;
     display: grid;
     grid-template-columns: [col1] 100px [col2] auto [col3] 100px;
-    grid-template-rows: [row1] 10% [row2] 10% [row3] auto;
+    grid-template-rows: [row1] 100px [row2] 100px [row3] auto;
     .nav {
         grid-column: col2 / col3;
         grid-row: row1 / row2;
-        display: flex;
-        justify-content: space-between;
-        line-height: 1;
-        .logo {
+        display: grid;
+        grid-template-rows: [row1] 70px [row2] auto;
+        .nav-container {
+            grid-row: row2;
             display: flex;
-            align-self: flex-end;
-        }
-        .links {
-            display: flex;
-            align-self: flex-end;
             justify-content: space-between;
+            line-height: 1;
+            .logo {
+                display: flex;
+                align-self: flex-end;
+            }
+            .links {
+                display: flex;
+                align-self: flex-end;
+                justify-content: space-between;
+            }
         }
     }
     .work {
